--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
             font-size: 14px;
             color: #555;
         }
+
+        .footer {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 14px;
+            color: #777;
+        }
     </style>
 </head>
 <body>
@@ -128,6 +135,8 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">Даша Кузьменко</div>
 
     <script>
         const headers = document.querySelectorAll('.menu-item-header');
